PLC/PLC/PGParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from PG.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class PGParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, INT_KW=8, FLOAT_KW=9, 
		STRING_KW=10, BOOL_KW=11, WRITE_KW=12, READ_KW=13, WHILE_KW=14, FOR_KW=15, 
		IF_KW=16, ELSE_KW=17, SEMI=18, COMMA=19, MUL=20, DIV=21, ADD=22, SUB=23, 
		MOD=24, GT=25, LT=26, EQ=27, AND=28, OR=29, NOT=30, NEQ=31, CONCAT=32, 
		STRING=33, BOOL=34, ID=35, FLOAT=36, INT=37, WS=38, COMMENT=39;
	public const int
		RULE_program = 0, RULE_stat = 1, RULE_expr = 2, RULE_ptype = 3;
	public static readonly string[] ruleNames = {
		"program", "stat", "expr", "ptype"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'{'", "'}'", "'?'", "':'", "'='", "'int'", "'float'", 
		"'string'", "'bool'", "'write'", "'read'", "'while'", "'for'", "'if'", 
		"'else'", "';'", "','", "'*'", "'/'", "'+'", "'-'", "'%'", "'>'", "'<'", 
		"'=='", "'&&'", "'||'", "'!'", "'!='", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, "INT_KW", "FLOAT_KW", 
		"STRING_KW", "BOOL_KW", "WRITE_KW", "READ_KW", "WHILE_KW", "FOR_KW", "IF_KW", 
		"ELSE_KW", "SEMI", "COMMA", "MUL", "DIV", "ADD", "SUB", "MOD", "GT", "LT", 
		"EQ", "AND", "OR", "NOT", "NEQ", "CONCAT", "STRING", "BOOL", "ID", "FLOAT", 
		"INT", "WS", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PG.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PGParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PGParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PGParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PGParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 9;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 8;
				stat();
				}
				}
				State = 11;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 817126047498L) != 0) );
			State = 13;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
	 
		public StatContext() { }
		public virtual void CopyFrom(StatContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BlockStatContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public BlockStatContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterBlockStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitBlockStat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockStat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WriteExprContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WRITE_KW() { return GetToken(PGParser.WRITE_KW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(PGParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(PGParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMI() { return GetTokens(PGParser.SEMI); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI(int i) {
			return GetToken(PGParser.SEMI, i);
		}
		public WriteExprContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterWriteExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitWriteExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWriteExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfConContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF_KW() { return GetToken(PGParser.IF_KW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE_KW() { return GetToken(PGParser.ELSE_KW, 0); }
		public IfConContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterIfCon(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitIfCon(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfCon(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhileLoopContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHILE_KW() { return GetToken(PGParser.WHILE_KW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		public WhileLoopContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterWhileLoop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitWhileLoop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileLoop(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EmptyExprContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMI() { return GetTokens(PGParser.SEMI); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI(int i) {
			return GetToken(PGParser.SEMI, i);
		}
		public EmptyExprContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterEmptyExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitEmptyExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmptyExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ReadExprContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode READ_KW() { return GetToken(PGParser.READ_KW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(PGParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(PGParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(PGParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(PGParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMI() { return GetTokens(PGParser.SEMI); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI(int i) {
			return GetToken(PGParser.SEMI, i);
		}
		public ReadExprContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterReadExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitReadExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReadExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CommentContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT() { return GetToken(PGParser.COMMENT, 0); }
		public CommentContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterComment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitComment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ForLoopContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FOR_KW() { return GetToken(PGParser.FOR_KW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMI() { return GetTokens(PGParser.SEMI); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI(int i) {
			return GetToken(PGParser.SEMI, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		public ForLoopContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterForLoop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitForLoop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForLoop(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DeclarattionContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public PtypeContext ptype() {
			return GetRuleContext<PtypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(PGParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(PGParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(PGParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(PGParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMI() { return GetTokens(PGParser.SEMI); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI(int i) {
			return GetToken(PGParser.SEMI, i);
		}
		public DeclarattionContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.EnterDeclarattion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPGListener typedListener = listener as IPGListener;
			if (typedListener != null) typedListener.ExitDeclarattion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPGVisitor<TResult> typedVisitor = visitor as IPGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclarattion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			State = 97;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT_KW:
			case FLOAT_KW:
			case STRING_KW:
			case BOOL_KW:
				_localctx = new DeclarattionContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 15;
				ptype();
				State = 16;
				Match(ID);
				State = 21;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 17;
					Match(COMMA);
					State = 18;
					Match(ID);
					}
					}
					State = 23;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 25;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 24;
					Match(SEMI);
					}
					}
					State = 27;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==SEMI );
				}
				break;
			case T__0:
			case SUB:
			case NOT:
			case STRING:
			case BOOL:
			case ID:
			case FLOAT:
			case INT:
				_localctx = new EmptyExprContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 29;
				expr(0);
				State = 31;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 30;
					Match(SEMI);
					}
					}
					State = 33;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==SEMI );
				}
				break;
			case WRITE_KW:
				_localctx = new WriteExprContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 35;
				Match(WRITE_KW);
				State = 36;
				expr(0);
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 37;
					Match(COMMA);
					State = 38;
					expr(0);
					}
					}
					State = 43;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 44;
					Match(SEMI);
					}
					}
					State = 47;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==SEMI );
				}
				break;
			case READ_KW:
				_localctx = new ReadExprContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 49;
				Match(READ_KW);
				State = 50;
				Match(ID);
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 51;
					Match(COMMA);
					State = 52;
					Match(ID);
					}
					}
					State = 57;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 58;
					Match(SEMI);
					}
					}
					State = 61;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==SEMI );
				}
				break;
			case COMMENT:
				_localctx = new CommentContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 63;
				Match(COMMENT);
				}
				break;
			case IF_KW:
				_localctx = new IfConContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 64;
				Match(IF_KW);
				State = 65;
				Match(T__0);
				State = 66;
				expr(0);
				State = 67;
				Match(T__1);
				State = 68;
				stat();
				State = 71;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
				case 1:
					{
					State = 69;
					Match(ELSE_KW);
					State = 70;
					stat();
					}
					break;
				}
				}
				break;
			case WHILE_KW:
				_localctx = new WhileLoopContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 73;
				Match(WHILE_KW);
				State = 74;
				Match(T__0);
				State = 75;
				expr(0);
				State = 76;
				Match(T__1);
				State = 77;
				stat();
				}
				break;
			case FOR_KW:
				_localctx = new ForLoopContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 79;
				Match(FOR_KW);
				State = 80;
				Match(T__0);
				State = 81;
				expr(0);
				State = 82;
				Match(SEMI);
				State = 83;
				expr(0);
				State = 84;
				Match(SEMI);
				State = 85;
				expr(0);
				State = 86;
				Match(T__1);
				State = 87;
				stat();
				}
				break;
			case T__2:
				_localctx = new BlockStatContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 89;
				Match(T__2);
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 90;
					stat();
					}
					}
					State = 93;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 817126047498L) != 0) );
				State = 95;
				Match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
